# pyromind-sdk

./: .gitignore  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  README.zh.md  README_CN.md  auto_layout_feature_summary.md  build_and_publish.sh  cli_auto_layout_quickref.md  cli_auto_layout_usage.md  complete_work_summary.md  create_release.sh  enhanced_validator_summary.md  pyproject.toml  pyproject_fix_summary.md  setup.py  update_version.py
docs/plans/: 2026-03-27-code-review-fixes.md  2026-03-27-integration-tests-design.md  2026-03-27-integration-tests-implementation.md
docs/validation/: 01_bare_except_base.py  02_bare_except_command_executor.py  03_bare_except_function_wrapper.py  04_missing_dependencies.py  05_deep_nesting.py  06_long_functions.py  07_missing_type_hints.py  08_magic_numbers.py  README.md  run_all.sh
pyromind_sdk/: README_CN.md  __init__.py  cli.py  python_function_to_yaml_cli.py  test_run_workflow_cli.py
pyromind_sdk/client/: README.md  README_CN.md  __init__.py  async_base.py  async_client.py  async_echomind.py  async_inference.py  async_instance.py  async_jupyterlab.py  async_sandbox.py  async_studio.py  async_training.py  base.py  client.py  echomind.py  inference.py  instance.py  jupyterLab.py  models.py  profile.py  sandbox.py  sandboxes.py  storage.py  studio.py  training.py  workflow_validator.py  xyflow_models.py
pyromind_sdk/common/: __init__.py  constants.py  node_sdk.py
pyromind_sdk/examples/: API_CLIENT_EXAMPLES.md  README.md  api_client_basic.py  complete_workflow_example.py  inference_example.py  jupyter_gpu_node.yaml  jupyter_instance_example.py  multi_input_node.yaml  multiline_text_node.yaml  python_calculator_node.yaml
pyromind_sdk/nodes/: __init__.py  command_executor.py  function_call_wrapper.py  node_validator.py  python_function_executor.py  python_to_yaml.py  type_converter.py  yaml_loader.py
pyromind_sdk/tests/: __init__.py  test_yaml_nodes.py
pyromind_sdk/workflow/: __init__.py  converter.py
script/: build.sh  common.sh  upload.sh  upload_test.sh
skill/: SKILL.md  _meta.json  reference.md
skill/scripts/: README.md  api_examples.py  convert_workflow.py  crud_examples.py  inspect_yaml_node.py  roundtrip_check.py  validate_workflow.py
(+110 files in other folders)
