[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyromind-sdk"
## todo update_version
version = "0.1.2"
description = "Lightweight SDK stub for local development and testing of third-party nodes without the full platform codebase"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "PyroMind Team", email = "support@pyromind.ai"}
]
keywords = ["sdk", "node", "development", "stub", "yaml", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "urllib3>=1.26.0",
    "minio>=7.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://pyromind.ai/"
Documentation = "https://github.com/pyromind/pyromind-sdk"
Repository = "https://github.com/pyromind/pyromind-sdk"
Issues = "https://github.com/pyromind/pyromind-sdk/issues"

[tool.setuptools]
packages = ["pyromind_sdk", "pyromind_sdk.common", "pyromind_sdk.nodes", "pyromind_sdk.tests", "pyromind_sdk.client", "pyromind_sdk.client.workflow"]

[tool.setuptools.package-data]
pyromind_sdk = ["*.md"]
"pyromind_sdk.examples" = ["*.yaml", "utils/*.py"]

[tool.pytest.ini_options]
# Exclude test_yaml_nodes.py from pytest collection
# This file contains utility functions, not pytest test functions
python_files = ["test_*.py", "*_test.py"]
norecursedirs = []
testpaths = ["pyromind_sdk/tests"]
# Exclude test_yaml_nodes.py specifically
python_functions = ["test_*"]
# Asyncio configuration for async tests (use STRICT mode to avoid auto-detection)
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

